# fastapi_event_planner

./: .env.example  alembic.ini  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 2024_08_23_1008-7f44f90bad62_add_users_events.py  2024_08_25_1241-156263d2db13_add_users_events.py  2024_08_28_1438-dbb9b976c230_add_users_events.py  2024_09_08_1404-5ad046a75ebb_add_users_events.py
src/: main.py
src/auth/: authenticate.py  hash_password.py  jwt_handler.py
src/database/: connection.py
src/models/: events.py  users.py
src/routes/: events.py  users.py
tests/: conftest.py  test_login.py  test_routes.py
